# crewai_stock_analysis_system

./: .env.example  FINAL_TEST_REPORT.md  README.md  log.txt  main.py  pyproject.toml
src/crews/: analysis_crew.py  data_collection_crew.py  decision_crew.py
src/templates/: index.html
src/utils/: llm_config.py
