[project]
name = "crewai-stock-analysis-system"
version = "0.1.0"
description = "CrewAI 股票分析系统"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.4.0",
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "akshare>=1.11.23",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "flask>=2.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.0",
    "sqlalchemy>=2.0.0",
    "schedule>=1.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "cachetools>=5.3.0",
    "mkdocs>=1.5.0",
    "litellm>=1.46.3",
    "rich>=13.7.0,<14.0.0",
    "pygments>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 包含 src 下的所有包/模块（项目源码在 src 目录）
packages = ["src"]
